--- a/src/index.css
+++ b/src/index.css
@@ -12,24 +12,20 @@ code {
     monospace;
 }
 
-/* .container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
-.row {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: 20px;
+#root {
+  width: 100%;
+  height: 100%;
 }
 
-.col-4 {
-  grid-column: span 4;
+body,
+#root {
+  background-color: #eeeeee;
+  display: flex;
+  flex-direction: column;
 }
-
-.col-6 {
-  grid-column: span 6;
-}
- */
